💄 fix style bleed

--- a/packages/@ourworldindata/grapher/src/modal/SourcesModal.scss
+++ b/packages/@ourworldindata/grapher/src/modal/SourcesModal.scss
@@ -125,6 +125,14 @@
             margin-right: $tab-gap;
         }
 
+        .citation__paragraph {
+            color: $light-text;
+        }
+
+        .citation__type {
+            color: $dark-text;
+        }
+
         .indicator-processing .indicator-processing__link {
             @include body-3-medium;
             display: inline-block;
